realtime db 연동 완료

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div id="signupDiv" style="display: none;">
                 <input type="email" id="signupEmail" placeholder="이메일">
                 <input type="text" id="signupName" placeholder="이름">
-                <input type="tel" id="signupPhone" placeholder="전화번호" pattern="[0-9]{11}">
+                <input type="tel" id="signupPhone" placeholder="전화번호">
                 <input type="password" id="signupPassword" placeholder="비밀번호 (최소 6자)" minlength="6">
                 <input type="password" id="signupPasswordConfirm" placeholder="비밀번호 확인">
                 <button id="signupButton">회원가입</button>
