--- a/main.html
+++ b/main.html
@@ -1,24 +1,33 @@
-<!--main.html-->
+<!-- main.html -->
 <!DOCTYPE html>
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>메인페이지</title>
-    <script>
-      window.onload = function () {
-        // 세션 스토리지에서 사용자의 이름을 가져옵니다.
-        var name = sessionStorage.getItem('username') || 'Anonymous';
-
-        // 사용자의 이름을 화면에 출력합니다.
-        document.getElementById('welcomeMessage').textContent =
-          '환영합니다. ' +
-          name +
-          '님! 여기는 메인화면 입니다. 여기서는 예약을 할 수 있습니다.';
-      };
-    </script>
+    <link rel="stylesheet" type="text/css" href="main.css" />
   </head>
   <body>
-    <h1 id="welcomeMessage"></h1>
+      <header>
+        <div class="header-content">
+            <p class="header-title">순금헤어</p>
+            <nav>
+                <ul>
+                    <li><a href="#">소개</a></li>
+                    <li><a href="#">공지사항</a></li>
+                    <li><a href="https://zrr.kr/jIXT">빠른길찾기</a></li>
+                    <li><a href="#">예약하기</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div id="bulge"></div>
+    </header>
+    <footer>
+        <p class="footer-title">순금헤어</p>
+        <p>
+        (주)순금헤어 | 대표자 임정인 | 도로명: 경기 군포시 오금로 146 101호 | 지번: 금정동 865-1 | 우편번호: 15833 | 업체 전화번호 0507-1390-2905 | Copyright ⓒ puregold.com. All rights Reserved.
+      </p>
+    </footer>
   </body>
+  <script src="main.js"></script>
 </html>
