초기 완성본 구현 완료

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <p>순금헤어 홈화면 입니다.</p>
     </div>
-
+    <script src="firebase.js"></script>
     <script src="index.js"></script>
 </body>
 
