--- a/main.html
+++ b/main.html
@@ -8,26 +8,53 @@
     <link rel="stylesheet" type="text/css" href="main.css" />
   </head>
   <body>
-      <header>
-        <div class="header-content">
-            <p class="header-title">순금헤어</p>
-            <nav>
-                <ul>
-                    <li><a href="#">소개</a></li>
-                    <li><a href="#">공지사항</a></li>
-                    <li><a href="https://zrr.kr/jIXT">빠른길찾기</a></li>
-                    <li><a href="#">예약하기</a></li>
-                </ul>
-            </nav>
-        </div>
-        <div id="bulge"></div>
+    <header>
+      <div class="header-content">
+        <p class="header-title">순금헤어</p>
+        <nav>
+          <ul>
+            <li><a href="https://m.place.naver.com/hairshop/1216414317/home?entry=pll">소개</a></li>
+            <li><a href="https://zrr.kr/jIXT">빠른길찾기</a></li>
+            <li><a href="reservation.html">예약하기</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
+    <section id="image-grid">
+      <div class="image-box">
+        <a class="image-link">
+          <img src="https://zrr.kr/IIgn" alt="전문성 이미지" class="image" />
+          <p class="image-caption">실력</p>
+        </a>
+      </div>
+      <div class="image-box">
+        <a class="image-link">
+          <img src="https://zrr.kr/7XeP" alt="미학 이미지" class="image" />
+          <p class="image-caption">미학</p>
+        </a>
+      </div>
+      <div class="image-box">
+        <a class="image-link">
+          <img src="https://zrr.kr/Ckl3" alt="소통 이미지" class="image" />
+          <p class="image-caption">소통</p>
+        </a>
+      </div>
+      <div class="image-box">
+        <a class="image-link">
+          <img src="https://zrr.kr/czl5" alt="지속관리 이미지" class="image" />
+          <p class="image-caption">관리</p>
+        </a>
+      </div>
+    </section>
+
     <footer>
-        <p class="footer-title">순금헤어</p>
-        <p>
-        (주)순금헤어 | 대표자 임정인 | 도로명: 경기 군포시 오금로 146 101호 | 지번: 금정동 865-1 | 우편번호: 15833 | 업체 전화번호 0507-1390-2905 | Copyright ⓒ puregold.com. All rights Reserved.
+      <p class="footer-title">순금헤어</p>
+      <p>
+        (주)순금헤어 | 대표자 임정인 | 도로명: 경기 군포시 오금로 146 101호 |
+        지번: 금정동 865-1 | 우편번호: 15833 | 업체 전화번호 0507-1390-2905 |
+        Copyright ⓒ puregold.com. All rights Reserved.
       </p>
     </footer>
+    <script src="main.js"></script>
   </body>
-  <script src="main.js"></script>
 </html>
