관리 이미지 교체

--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
       </div>
       <div class="image-box">
         <a class="image-link">
-          <img src="https://zrr.kr/czl5" alt="지속관리 이미지" class="image" />
+          <img src="https://zrr.kr/nRqL" alt="지속관리 이미지" class="image" />
           <p class="image-caption">관리</p>
         </a>
       </div>
