--- a/myReservation.html
+++ b/myReservation.html
@@ -12,7 +12,7 @@
   <body>
     <div id="reservationDetails"></div>
     <div id="reservationInfo">
-      <a href="reservation.html" id="returnReservation">예약 화면으로</a>
+      <a href="reservation.html" id="returnReservation">예약화면</a>
 
       <button id="cancelReservation">예약 취소</button>
     </div>
