--- a/index.html
+++ b/index.html
@@ -1,49 +1,13 @@
 <!-- index.html -->
 <!DOCTYPE html>
 <html lang="ko">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>순금헤어</title>
-    <link rel="stylesheet" type="text/css" href="index.css" />
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-
-<!-- Add Firebase products that you want to use -->
-<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
-
-<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
-
-</head>
-
-<body>
-    <div class="container">
-        <header>
-            <div class="header-content">
-                <p class="header-title">순금헤어</p>
-            </div>
-        </header>
-        <div class="form-container">
-            <div id="loginDiv">
-                <input type="email" id="loginEmail" placeholder="이메일">
-                <input type="password" id="loginPassword" placeholder="비밀번호">
-                <button id="loginButton">로그인</button>
-                <p>아직 계정이 없으신가요? <a href="#" id="signupLink">회원가입 하기</a></p>
-            </div>
-            <div id="signupDiv" style="display: none;">
-                <input type="email" id="signupEmail" placeholder="이메일">
-                <input type="text" id="signupName" placeholder="이름">
-                <input type="tel" id="signupPhone" placeholder="전화번호">
-                <input type="password" id="signupPassword" placeholder="비밀번호 (최소 6자)" minlength="6">
-                <input type="password" id="signupPasswordConfirm" placeholder="비밀번호 확인">
-                <button id="signupButton">회원가입</button>
-                <p>이미 계정이 있으신가요? <a href="#" id="loginLink">로그인 하기</a></p>
-            </div>
-        </div>
-    </div>
-    <script src="firebase.js"></script>
-    <script src="index.js"></script>
-</body>
-
+    <meta http-equiv="refresh" content="0; url=main.html" />
+    <title>Redirecting to Main</title>
+  </head>
+  <body>
+    <p>메인 페이지로 이동 중입니다...</p>
+  </body>
 </html>
+
