--- a/clientlist.html
+++ b/clientlist.html
@@ -1,29 +1,49 @@
 <!-- clientlist.html -->
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
-    <meta charset="UTF-8">
-    <title>고객 예약 리스트</title>
-    <link rel="stylesheet" href="clientlist.css">
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
+  <meta charset="UTF-8">
+  <title>고객 예약 리스트</title>
+  <link rel="stylesheet" href="clientlist.css">
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
 </head>
+
 <body>
-    <h1>고객 예약 리스트</h1>
-    <table id="reservationList">
-      <tr>
-        <th>체크</th>
-        <th>성함</th>
-        <th>예약 시간</th>
-        <th>이메일</th>
-        <th>성별</th>
-        <th>커트 내용</th>
-      </tr>
-    </table>
-    <button id="deleteBtn">선택 항목 삭제</button>
-    <a href="main.html" id="returnMain">메인 화면으로</a>
-    <script src="firebase.js"></script>
-    <script src="clientlist.js"></script>
+  <div class="container">
+    <h1><i class="fas fa-calendar-check"></i> 고객 예약 리스트</h1>
+    <div class="button-group">
+      <button id="deleteBtn" class="btn">
+        <i class="fas fa-trash-alt"></i>
+        선택 항목 삭제
+      </button>
+      <a href="main.html" id="returnMain" class="btn">
+        <i class="fas fa-home"></i>
+        메인 화면으로
+      </a>
+    </div>
+    <div class="card">
+      <table id="reservationList">
+        <thead>
+          <tr>
+            <th><i class="fas fa-check-square"></i></th>
+            <th><i class="fas fa-user"></i> 성함</th>
+            <th><i class="far fa-clock"></i> 예약 시간</th>
+            <th><i class="fas fa-envelope"></i> 이메일</th>
+            <th><i class="fas fa-venus-mars"></i> 성별</th>
+            <th><i class="fas fa-cut"></i> 커트 내용</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- JavaScript로 데이터가 여기에 삽입됩니다 -->
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <script src="firebase.js"></script>
+  <script src="clientlist.js"></script>
 </body>
+
 </html>
