--- a/reservation.html
+++ b/reservation.html
@@ -1,35 +1,58 @@
 <!-- reservation.html -->
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <title>예약하기</title>
-    <link rel="stylesheet" type="text/css" href="reservation.css" />
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <title>예약하기</title>
+  <link rel="stylesheet" type="text/css" href="reservation.css" />
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
+</head>
+
+<body>
+  <div class="container">
+    <h1>예약하기</h1>
     <form id="reservationForm">
-      <div id="visitTime">
-        <select id="amPm">
-          <option value="am">오전</option>
-          <option value="pm">오후</option>
-        </select>
-        <input type="number" id="hour" min="1" max="12" placeholder="시" />
-        <input type="number" id="minute" min="0" max="59" placeholder="분" />
+      <div class="form-group">
+        <label for="timePicker">방문 시간</label>
+        <i class="far fa-clock"></i>
+        <input type="time" id="timePicker" class="input-field" required />
       </div>
-      <select id="gender">
-        <option value="male">남</option>
-        <option value="female">여</option>
-      </select>
-      <input type="text" id="cutContent" placeholder="희망 커트내용" />
-      <button type="submit">예약하기</button>
-      <a href="myReservation.html" id="viewReservationBtn">내 예약정보 보기</a>
-      <a href="main.html" id="returnMain">메인 화면으로</a>
+
+      <div class="form-group">
+        <label for="gender">성별</label>
+        <i class="fas fa-venus-mars"></i>
+        <select id="gender" class="input-field" required>
+          <option value="male">남</option>
+          <option value="female">여</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label for="cutContent">희망 커트 내용</label>
+        <i class="fas fa-cut"></i>
+        <input type="text" id="cutContent" class="input-field" placeholder="커트에 대한 요청 사항" required />
+      </div>
+
+      <button type="submit" class="btn btn-primary">
+        <i class="fas fa-calendar-check"></i>예약하기
+      </button>
+
+      <a href="myReservation.html" class="btn btn-secondary">
+        <i class="fas fa-list-alt"></i>내 예약정보 보기
+      </a>
+
+      <a href="main.html" class="btn btn-return">
+        <i class="fas fa-home"></i>메인 화면으로
+      </a>
     </form>
 
-    <script src="firebase.js"></script>
-    <script src="reservation.js"></script>
-  </body>
+    <div id="adminSection"></div>
+  </div>
+  <script src="firebase.js"></script>
+  <script src="reservation.js"></script>
+</body>
+
 </html>
