--- a/loginSignup.html
+++ b/loginSignup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>순금헤어</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <link rel="stylesheet" type="text/css" href="loginSignup.css" />
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
@@ -12,25 +13,48 @@
 <body>
     <div class="container">
         <header>
-            <div class="header-content">
-                <p class="header-title">순금헤어</p>
-            </div>
+            <h1 class="header-title">순금헤어</h1>
         </header>
         <div class="form-container">
             <div id="loginDiv">
-                <input type="email" id="loginEmail" placeholder="이메일" required>
-                <input type="password" id="loginPassword" placeholder="비밀번호" required>
+                <div class="input-group">
+                    <i class="fas fa-envelope"></i>
+                    <input type="email" id="loginEmail" placeholder="이메일" required>
+                </div>
+                <div class="input-group">
+                    <i class="fas fa-lock"></i>
+                    <input type="password" id="loginPassword" placeholder="비밀번호" required>
+                </div>
                 <button id="loginButton">로그인</button>
-                <p>아직 계정이 없으신가요? <a href="#" id="signupLink">회원가입 하기</a></p>
+                <div class="switch-form">
+                    아직 계정이 없으신가요?<a href="#" id="signupLink">회원가입</a>
+                </div>
             </div>
             <div id="signupDiv" style="display: none;">
-                <input type="email" id="signupEmail" placeholder="이메일" required>
-                <input type="text" id="signupName" placeholder="이름" required>
-                <input type="tel" id="signupPhone" placeholder="전화번호" required>
-                <input type="password" id="signupPassword" placeholder="비밀번호 (최소 6자)" minlength="6" required>
-                <input type="password" id="signupPasswordConfirm" placeholder="비밀번호 확인" required>
+                <div class="input-group">
+                    <i class="fas fa-envelope"></i>
+                    <input type="email" id="signupEmail" placeholder="이메일" required>
+                </div>
+                <div class="input-group">
+                    <i class="fas fa-user"></i>
+                    <input type="text" id="signupName" placeholder="이름" required>
+                </div>
+                <div class="input-group">
+                    <i class="fas fa-phone"></i>
+                    <input type="tel" id="signupPhone" placeholder="전화번호" required>
+                </div>
+                <div class="input-group">
+                    <i class="fas fa-lock"></i>
+                    <input type="password" id="signupPassword" placeholder="비밀번호 (최소 6자)" minlength="6" required>
+                </div>
+                <div class="input-group">
+                    <i class="fas fa-lock"></i>
+                    <input type="password" id="signupPasswordConfirm" placeholder="비밀번호 확인" required>
+                </div>
                 <button id="signupButton">회원가입</button>
-                <p>이미 계정이 있으신가요? <a href="#" id="loginLink">로그인 하기</a></p>
+                <div class="switch-form">
+                    이미 계정이 있으신가요?<a href="#" id="loginLink">로그인</a>
+                </div>
             </div>
         </div>
     </div>
